finish contact part

--- a/index.html
+++ b/index.html
@@ -218,9 +218,136 @@
         </div>
       </div>
       <!-- End experience -->
+      <!-- Start work -->
+      <div class="work bg-color-white">
+        <div class="container">
+          <h2 class="subtitle u-text-center">MY WORKS</h2>
+          <div class="work-list">
+            <div class="work-item">
+              <div class="row">
+                <div class="col-sm-6 col-sm-push-5">
+                  <div class="imgbox">
+                    <div class="imgbox__inner imgbox__inner--4-3">
+                      <div class="image" style="background-image: url('image/works/thumbnail/work001_thumb.jpg');"></div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-sm-4 col-sm-pull-5">
+                  <div class="work-item__text work-item__text--right">
+                    <h3 class="work-item__title work-item__title--right">Work title for good design stuff</h3>
+                    <p class="work-item__intro">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam perspiciatis facilis vitae totam expedita distinctio possimus facere non quasi accusantium enim explicabo, deleniti nulla quos deserunt voluptas consectetur inventore optio?</p>
+                    <a href="" class="text-btn text-btn--primary text-btn--lg">Show project</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="work-item">
+              <div class="row">
+                <div class="col-sm-6 col-sm-push-1">
+                  <div class="imgbox">
+                    <div class="imgbox__inner imgbox__inner--4-3">
+                      <div class="image" style="background-image: url('image/works/thumbnail/work002_thumb.jpg');"></div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-sm-4 col-sm-push-1">
+                  <div class="work-item__text">
+                    <h3 class="work-item__title work-item__title--left">Work title for good design stuff</h3>
+                    <p class="work-item__intro">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam perspiciatis facilis vitae totam expedita distinctio possimus facere non quasi accusantium enim explicabo, deleniti nulla quos deserunt voluptas consectetur inventore optio?</p>
+                    <a href="" class="text-btn text-btn--primary text-btn--lg">Show project</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="work-item">
+              <div class="row">
+                <div class="col-sm-6 col-sm-push-6">
+                  <div class="imgbox">
+                    <div class="imgbox__inner imgbox__inner--4-3">
+                      <div class="image" style="background-image: url('image/works/thumbnail/work003_thumb.jpg');"></div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-sm-4 col-sm-pull-5">
+                  <div class="work-item__text">
+                    <h3 class="work-item__title work-item__title--right">Work title for good design stuff</h3>
+                    <p class="work-item__intro">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam perspiciatis facilis vitae totam expedita distinctio possimus facere non quasi accusantium enim explicabo, deleniti nulla quos deserunt voluptas consectetur inventore optio?</p>
+                    <a href="" class="text-btn text-btn--primary text-btn--lg">Show project</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="work-item">
+              <div class="row">
+                <div class="col-sm-6 col-sm-push-1">
+                  <div class="imgbox">
+                    <div class="imgbox__inner imgbox__inner--4-3">
+                      <div class="image" style="background-image: url('image/works/thumbnail/work004_thumb.jpg');"></div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-sm-4 col-sm-push-1">
+                  <div class="work-item__text">
+                    <h3 class="work-item__title">Work title for good design stuff</h3>
+                    <p class="work-item__intro">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam perspiciatis facilis vitae totam expedita distinctio possimus facere non quasi accusantium enim explicabo, deleniti nulla quos deserunt voluptas consectetur inventore optio?</p>
+                    <a href="" class="text-btn text-btn--primary text-btn--lg">Show project</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="work-item">
+              <div class="row">
+                <div class="col-sm-6 col-sm-push-5">
+                  <div class="imgbox">
+                    <div class="imgbox__inner imgbox__inner--4-3">
+                      <div class="image" style="background-image: url('image/works/thumbnail/work005_thumb.jpg');"></div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-sm-4 col-sm-pull-5">
+                  <div class="work-item__text work-item__text--right">
+                    <h3 class="work-item__title work-item__title--right">Work title for good design stuff</h3>
+                    <p class="work-item__intro">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam perspiciatis facilis vitae totam expedita distinctio possimus facere non quasi accusantium enim explicabo, deleniti nulla quos deserunt voluptas consectetur inventore optio?</p>
+                    <a href="" class="text-btn text-btn--primary text-btn--lg">Show project</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="btn-group btn-group--center">
+            <a href="" class="btn btn--secondary btn--md">More works</a>
+          </div>
+        </div>
+      </div>
+    <!-- End work -->
+    <!-- Start contact -->
+    <div class="contact">
+      <div class="container">
+        <h2 class="subtitle u-text-center color-white">CONTACT</h2>
+        <form action="" class="form">
+          <label for="">Name</label>
+          <input type="text">
+          <div class="row">
+            <div class="col-sm-6">
+              <label for="">Phone</label>
+              <input type="tel">
+            </div>
+            <div class="col-sm-6">
+              <label for="">Email</label>
+              <input type="email">
+            </div>
+          </div>
+          <label for="">Meassge</label>
+          <textarea name="" id="" cols="30" rows="10"></textarea>
+          <div class="btn-group btn-group--center">
+            <input type="submit" class="btn btn--primary btn--md" value="Send">
+          </div>
+        </form>
+      </div>
+    </div>
+    <!-- End contact -->
     </section>
     <!-- End main -->
-
     <!-- Start footer -->
     <footer>
     </footer>
