--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       </div>
     <!-- End about -->
       <!-- Start quote -->
-        <div class="quote bg-color-white">
+        <div class="quote bg-color-white lean-bg--top lean-bg--no-margin">
           <div class="container">
             <div class="row">
               <div class="col-sm-6 col-sm-push-3">
@@ -96,8 +96,8 @@
           </div>
         </div>
       <!-- End quote -->
-      <!-- End skill -->
-        <div class="skill bg-color-white">
+      <!-- Start skill -->
+        <div class="skill bg-color-white lean-bg--bottom">
           <div class="container">
             <h2 class="subtitle u-text-center">SKILL</h2>
             <div class="skill-group">
@@ -170,7 +170,7 @@
             </div>
           </div>
         </div> 
-      <!-- Start skill -->
+      <!-- End skill -->
       <!-- Start experience -->
       <div class="experience">
         <div class="container">
@@ -219,7 +219,7 @@
       </div>
       <!-- End experience -->
       <!-- Start work -->
-      <div class="work bg-color-white">
+      <div class="work bg-color-white lean-bg--top lean-bg--bottom">
         <div class="container">
           <h2 class="subtitle u-text-center">MY WORKS</h2>
           <div class="work-list">
@@ -339,17 +339,43 @@
           </div>
           <label for="">Meassge</label>
           <textarea name="" id="" cols="30" rows="10"></textarea>
-          <div class="btn-group btn-group--center">
+          <div class="btn-group btn-group--center form__btn-group">
             <input type="submit" class="btn btn--primary btn--md" value="Send">
           </div>
         </form>
+        <div class="divide-text">or</div>
+        <div class="info">
+          <div class="info_email">
+            <a href="mailTo:s110319022@gmail.com">s110319022@gmail.com</a>
+          </div>
+          <div class="info_phone">
+            <a href="tel:0938379357">0938379357</a>
+          </div>
+          <div class="social-bar info__social-bar">
+            <a href="" class="icon-btn">
+              <i class="icon icon-twitter"></i>
+            </a>
+            <a href="" class="icon-btn">
+              <i class="icon icon-dribbble"></i>
+            </a>
+            <a href="" class="icon-btn">
+              <i class="icon icon-facebook-official"></i>
+            </a>
+          </div>
+        </div>
       </div>
     </div>
     <!-- End contact -->
     </section>
     <!-- End main -->
     <!-- Start footer -->
-    <footer>
+    <footer class="footer">
+      <div class="container">
+        <p class="final-text">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Hic fuga distinctio eum esse quam laborum asperiores saepe incidunt placeat voluptatem corporis veritatis omnis ad labore soluta, autem, repellat ratione explicabo.
+        </p>
+        <p class="copyright">Copyright @ 2018 Alan's CV demo</p>
+      </div>
     </footer>
     <!-- End footer -->
   </div>
