--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     <!-- End bg -->
 
     <!-- Start header -->
-    <header class="header">
+    <header class="header js-header">
       <div class="container">
         <div class="navbar navbar--collapse u-clearfix ">
           <div class="social-bar navbar＿social-navbar">
-            <a href="" class="icon-btn">
+            <a href="https://www.facebook.com/profile.php?id=100009121597769" class="icon-btn">
               <i class="icon icon-facebook-official"></i>
             </a>
             <a href="" class="icon-btn">
@@ -49,11 +49,11 @@
                     </a>
                   </div>
                   <ul>
-                    <li><a href="#" class="popup-menu__item">ABOUT</a></li>
-                    <li><a href="#" class="popup-menu__item">SKILL</a></li>
-                    <li><a href="#" class="popup-menu__item">EXPERINCE</a></li>
-                    <li><a href="#" class="popup-menu__item">MY WORK</a></li>
-                    <li><a href="#" class="popup-menu__item">CONTENT</a></li>
+                    <li><a href="#about" class="popup-menu__item">ABOUT</a></li>
+                    <li><a href="#skill" class="popup-menu__item">SKILL</a></li>
+                    <li><a href="#experience" class="popup-menu__item">EXPERINCE</a></li>
+                    <li><a href="#work" class="popup-menu__item">MY WORK</a></li>
+                    <li><a href="#contact" class="popup-menu__item">CONTENT</a></li>
                   </ul>
                 </div>
               </div>
@@ -62,21 +62,28 @@
       </div>
     </header>
     <!-- End header -->
+
     <!-- Start main -->
     <section class="main">
+
     <!-- Start about -->
-      <div class="hero">
+      <div id="about" class="hero">
+        <img class="graphic_001 u-xs-hidden" src="image/parallax_graphic/tri-blue.svg" alt="blue_tri" data-stellar-ratio="1.5">
+        <img class="graphic_002" src="image/parallax_graphic/cir-pink-sm.svg" alt="pink-cir" data-stellar-ratio="1.5">
         <div class="hero__bg"></div>
         <div class="container">
-          <div class="hero__content">
+          <div class="hero__content wow bounceInLeft">
             <h1 class="hero__heading">HELLO<br>I'M ALAN</h1>
+            <a href="#" class="btn btn--primary btn--lg">Contact</a>
           </div>
-          <a href="#" class="btn btn--primary btn--lg">Contact</a>
         </div>
       </div>
     <!-- End about -->
       <!-- Start quote -->
+
         <div class="quote bg-color-white lean-bg--top lean-bg--no-margin">
+          <img class="graphic_003 u-xs-hidden" data-stellar-ratio="1.5" src="image/parallax_graphic/tri-purple.svg" alt="">
+          <img class="graphic_004 u-xs-hidden" data-stellar-ratio="1.5" src="image/parallax_graphic/dot-blue.svg" alt="">
           <div class="container">
             <div class="row">
               <div class="col-sm-6 col-sm-push-3">
@@ -85,7 +92,7 @@
                     <i class="icon-quote-right"></i>
                   </div>
                   <p class="quote__text">
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus recusandae quibusdam ratione. Fugit repellendus aspernatur possimus commodi distinctio, culpa dolorum!
+                      我是趙子榮，國立臺北教育大學數位科技設計系畢業，致力於前端開發並將Motion Graphic加入網頁以創造新型態的互動式視覺體驗。目前前後端整合與前端三大框架一直是我在持續專研的項目。
                   </p>
                   <div class="quote__name">
                     <span>Somebody - </span>from somewhere
@@ -97,13 +104,15 @@
         </div>
       <!-- End quote -->
       <!-- Start skill -->
-        <div class="skill bg-color-white lean-bg--bottom">
+        <div id="skill" class="skill bg-color-white lean-bg--bottom">
+          <img class="graphic_005" data-stellar-ratio="1.5" src="image/parallax_graphic/cir-pink-md.svg" alt="">
+          <img class="graphic_006" data-stellar-ratio="1.5" src="image/parallax_graphic/dot-grey.svg" alt="">
           <div class="container">
-            <h2 class="subtitle u-text-center">SKILL</h2>
+            <h2 class="subtitle u-text-center wow bounceInUp">SKILL</h2>
             <div class="skill-group">
               <div class="row">
                 <div class="col-sm-6">
-                  <div class="skill-card">
+                  <div class="skill-card  wow bounceInUp">
                     <div class="skill-card__inner">
                       <h4 class="skill-card__title">
                         HTML
@@ -118,7 +127,7 @@
                   </div>
                 </div>
                 <div class="col-sm-6">
-                  <div class="skill-card">
+                  <div class="skill-card  wow bounceInUp" data-wow-delay="0.4s">
                     <div class="skill-card__inner">
                       <h4 class="skill-card__title">
                         CSS
@@ -135,7 +144,7 @@
               </div>
               <div class="row">
                 <div class="col-sm-6">
-                    <div class="skill-card">
+                    <div class="skill-card wow bounceInUp" data-wow-delay="0.8s">
                       <div class="skill-card__inner">
                         <h4 class="skill-card__title">
                           SKETCH
@@ -150,7 +159,7 @@
                     </div>
                   </div>
                   <div class="col-sm-6">
-                    <div class="skill-card">
+                    <div class="skill-card  wow bounceInUp" data-wow-delay="1.1s">
                         <div class="skill-card__inner">
                           <h4 class="skill-card__title">
                             AI
@@ -172,12 +181,16 @@
         </div> 
       <!-- End skill -->
       <!-- Start experience -->
-      <div class="experience">
+      <div id="experience" class="experience">
+        <img class="graphic_007 u-xs-hidden" data-stellar-ratio="1.5" src="image/parallax_graphic/cir-purple-lg.svg" alt="">
+        <img class="graphic_008" data-stellar-ratio="1.5" src="image/parallax_graphic/dot-grey.svg" alt="">
+        <img class="graphic_009" data-stellar-ratio="1.5" src="image/parallax_graphic/cir-pink-sm.svg" alt="">
+        <img class="graphic_010 u-xs-hidden" data-stellar-ratio="1.5" src="image/parallax_graphic/dot-blue.svg" alt="">
         <div class="container">
-          <h2 class="subtitle u-text-center color-white">EXPERIENCE</h2>
+          <h2 class="subtitle u-text-center color-white  wow bounceInUp">EXPERIENCE</h2>
           <div class="timeline-group">
             <div class="timeline"></div>
-            <div class="timeline-cards">
+            <div class="timeline-cards wow bounceInUp">
               <div class="timeline-cards__row">
                 <div class="timeline-card">
                   <p class="timeline-card__text">
@@ -186,28 +199,28 @@
                 </div>
               </div>
               <div class="timeline-cards__row">
-                <div class="timeline-card">
+                <div class="timeline-card wow bounceInUp">
                   <p class="timeline-card__text">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit quas animi delectus! Maxime doloremque aperiam id eveniet animi consectetur molestias maiores, at quas perspiciatis quod. Iure consequuntur quos sapiente assumenda.
                   </p>
                 </div>
               </div>
               <div class="timeline-cards__row">
-                <div class="timeline-card">
+                <div class="timeline-card wow bounceInUp">
                   <p class="timeline-card__text">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit quas animi delectus! Maxime doloremque aperiam id eveniet animi consectetur molestias maiores, at quas perspiciatis quod. Iure consequuntur quos sapiente assumenda.
                   </p>
                 </div>
               </div>
               <div class="timeline-cards__row">
-                <div class="timeline-card">
+                <div class="timeline-card wow bounceInUp">
                   <p class="timeline-card__text">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit quas animi delectus! Maxime doloremque aperiam id eveniet animi consectetur molestias maiores, at quas perspiciatis quod. Iure consequuntur quos sapiente assumenda.
                   </p>
                 </div>
               </div>
               <div class="timeline-cards__row">
-                <div class="timeline-card">
+                <div class="timeline-card wow bounceInUp">
                   <p class="timeline-card__text">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit quas animi delectus! Maxime doloremque aperiam id eveniet animi consectetur molestias maiores, at quas perspiciatis quod. Iure consequuntur quos sapiente assumenda.
                   </p>
@@ -219,17 +232,28 @@
       </div>
       <!-- End experience -->
       <!-- Start work -->
-      <div class="work bg-color-white lean-bg--top lean-bg--bottom">
+      <div id="work" class="work bg-color-white lean-bg--top lean-bg--bottom">
+        <img class="graphic_011" data-stellar-ratio="1.5" src="image/parallax_graphic/cir-pink-lg.svg" alt="">
+        <img class="graphic_012" data-stellar-ratio="1.5" src="image/parallax_graphic/dot-grey.svg" alt="">
+        <img class="graphic_013" data-stellar-ratio="1.5" src="image/parallax_graphic/tri-blue.svg" alt="">
+        <img class="graphic_014 u-xs-hidden" data-stellar-ratio="1.5" src="image/parallax_graphic/cir-purple-md.svg" alt="">
+        <img class="graphic_015" data-stellar-ratio="1.5" src="image/parallax_graphic/dot-grey.svg" alt="">
+        <img class="graphic_016" data-stellar-ratio="1.5" src="image/parallax_graphic/cir-pink-md.svg" alt="">
+        <img class="graphic_017" data-stellar-ratio="1.5" src="image/parallax_graphic/dot-blue.svg" alt="">
+        <img class="graphic_018" data-stellar-ratio="1.5" src="image/parallax_graphic/cir-pink-sm.svg" alt="">
+        <img class="graphic_019" data-stellar-ratio="1.5" src="image/parallax_graphic/tri-purple.svg" alt="">
         <div class="container">
-          <h2 class="subtitle u-text-center">MY WORKS</h2>
+          <h2 class="subtitle u-text-center wow bounceInUp">MY WORKS</h2>
           <div class="work-list">
-            <div class="work-item">
+            <div class="work-item wow fadeInUp">
               <div class="row">
                 <div class="col-sm-6 col-sm-push-5">
                   <div class="imgbox">
-                    <div class="imgbox__inner imgbox__inner--4-3">
-                      <div class="image" style="background-image: url('image/works/thumbnail/work001_thumb.jpg');"></div>
-                    </div>
+                    <a href="image/works/work001.jpg" class="" data-fancybox="group">
+                      <div class="imgbox__inner imgbox__inner--4-3">
+                        <div class="image" style="background-image: url('image/works/thumbnail/work001_thumb.jpg');"></div>
+                      </div>
+                    </a>
                   </div>
                 </div>
                 <div class="col-sm-4 col-sm-pull-5">
@@ -241,13 +265,15 @@
                 </div>
               </div>
             </div>
-            <div class="work-item">
+            <div class="work-item wow fadeInUp">
               <div class="row">
                 <div class="col-sm-6 col-sm-push-1">
                   <div class="imgbox">
-                    <div class="imgbox__inner imgbox__inner--4-3">
-                      <div class="image" style="background-image: url('image/works/thumbnail/work002_thumb.jpg');"></div>
-                    </div>
+                    <a href="image/works/work002.jpg" class="" data-fancybox="group">
+                      <div class="imgbox__inner imgbox__inner--4-3">
+                        <div class="image" style="background-image: url('image/works/thumbnail/work002_thumb.jpg');"></div>
+                      </div>
+                    </a>
                   </div>
                 </div>
                 <div class="col-sm-4 col-sm-push-1">
@@ -259,13 +285,15 @@
                 </div>
               </div>
             </div>
-            <div class="work-item">
+            <div class="work-item wow fadeInUp">
               <div class="row">
                 <div class="col-sm-6 col-sm-push-6">
                   <div class="imgbox">
-                    <div class="imgbox__inner imgbox__inner--4-3">
-                      <div class="image" style="background-image: url('image/works/thumbnail/work003_thumb.jpg');"></div>
-                    </div>
+                    <a href="image/works/work003.jpg" class="" data-fancybox="group">
+                      <div class="imgbox__inner imgbox__inner--4-3">
+                        <div class="image" style="background-image: url('image/works/thumbnail/work003_thumb.jpg');"></div>
+                      </div>
+                    </a>
                   </div>
                 </div>
                 <div class="col-sm-4 col-sm-pull-5">
@@ -277,13 +305,15 @@
                 </div>
               </div>
             </div>
-            <div class="work-item">
+            <div class="work-item wow fadeInUp">
               <div class="row">
                 <div class="col-sm-6 col-sm-push-1">
                   <div class="imgbox">
-                    <div class="imgbox__inner imgbox__inner--4-3">
-                      <div class="image" style="background-image: url('image/works/thumbnail/work004_thumb.jpg');"></div>
-                    </div>
+                    <a href="image/works/work004.jpg" class="" data-fancybox="group">
+                      <div class="imgbox__inner imgbox__inner--4-3">
+                        <div class="image" style="background-image: url('image/works/thumbnail/work004_thumb.jpg');"></div>
+                      </div>
+                    </a>
                   </div>
                 </div>
                 <div class="col-sm-4 col-sm-push-1">
@@ -295,13 +325,15 @@
                 </div>
               </div>
             </div>
-            <div class="work-item">
+            <div class="work-item wow fadeInUp">
               <div class="row">
                 <div class="col-sm-6 col-sm-push-5">
                   <div class="imgbox">
-                    <div class="imgbox__inner imgbox__inner--4-3">
-                      <div class="image" style="background-image: url('image/works/thumbnail/work005_thumb.jpg');"></div>
-                    </div>
+                    <a href="image/works/work005.jpg" class="" data-fancybox="group">
+                      <div class="imgbox__inner imgbox__inner--4-3">
+                        <div class="image" style="background-image: url('image/works/thumbnail/work005_thumb.jpg');"></div>
+                      </div>
+                    </a>
                   </div>
                 </div>
                 <div class="col-sm-4 col-sm-pull-5">
@@ -314,17 +346,22 @@
               </div>
             </div>
           </div>
-          <div class="btn-group btn-group--center">
-            <a href="" class="btn btn--secondary btn--md">More works</a>
+          <div class="btn-group btn-group--center ">
+            <a href="" class="btn btn--secondary btn--md wow bounceIn">More works</a>
           </div>
         </div>
       </div>
     <!-- End work -->
     <!-- Start contact -->
-    <div class="contact">
+    <div id="contact" class="contact">
+      <img class="graphic_020" data-stellar-ratio="1.5" src="image/parallax_graphic/dot-grey.svg" alt="">
+      <img class="graphic_021" data-stellar-ratio="1.5" src="image/parallax_graphic/cir-pink-sm.svg" alt="">
+      <img class="graphic_022" data-stellar-ratio="1.5" src="image/parallax_graphic/tri-blue.svg" alt="">
+      <img class="graphic_023 u-xs-hidden" data-stellar-ratio="1.5" src="image/parallax_graphic/dot-blue.svg" alt="">
+      <img class="graphic_024" data-stellar-ratio="1.5" src="image/parallax_graphic/cir-purple-md.svg" alt="">
       <div class="container">
-        <h2 class="subtitle u-text-center color-white">CONTACT</h2>
-        <form action="" class="form">
+        <h2 class="subtitle u-text-center color-white  wow bounceInUp">CONTACT</h2>
+        <form action="" class="form wow fadeInUp">
           <label for="">Name</label>
           <input type="text">
           <div class="row">
@@ -343,22 +380,22 @@
             <input type="submit" class="btn btn--primary btn--md" value="Send">
           </div>
         </form>
-        <div class="divide-text">or</div>
+        <div class="divide-text wow fadeInUp">or</div>
         <div class="info">
-          <div class="info_email">
+          <div class="info_email wow bounceInUp">
             <a href="mailTo:s110319022@gmail.com">s110319022@gmail.com</a>
           </div>
-          <div class="info_phone">
+          <div class="info_phone wow bounceInUp">
             <a href="tel:0938379357">0938379357</a>
           </div>
           <div class="social-bar info__social-bar">
-            <a href="" class="icon-btn">
+            <a href="" class="icon-btn wow bounceIn" data-wow-delay="0.3s">
               <i class="icon icon-twitter"></i>
             </a>
-            <a href="" class="icon-btn">
+            <a href="" class="icon-btn wow bounceIn" data-wow-delay="0.6s">
               <i class="icon icon-dribbble"></i>
             </a>
-            <a href="" class="icon-btn">
+            <a href="https://www.facebook.com/profile.php?id=100009121597769" class="icon-btn wow bounceIn" data-wow-delay="0.9s">
               <i class="icon icon-facebook-official"></i>
             </a>
           </div>
@@ -379,18 +416,11 @@
     </footer>
     <!-- End footer -->
   </div>
+  <!-- JS -->
+  <script src="js/jquery-2.0.2.min.js"></script>
+  <script src="js/wow.min.js"></script>
+  <script src="js/jquery.fancybox.min.js"></script>
+  <script src="js/jquery.stellar.min.js"></script>
+  <script src="js/custom.js"></script>
 </body>
 </html>
-
-<script>
-  // Initialize Firebase
-  var config = {
-    apiKey: "AIzaSyABQoKBy4bQ3hib3aBrOOA2MdSI4QPsdI0",
-    authDomain: "cv-dev.firebaseapp.com",
-    databaseURL: "https://cv-dev.firebaseio.com",
-    projectId: "cv-dev",
-    storageBucket: "",
-    messagingSenderId: "960199162124"
-  };
-  firebase.initializeApp(config);
-</script>
